Improve error logging - Part 2
