# api/openapi/model_error_code.go
@@ -15,7 +15,7 @@ import (
 	"fmt"
 )
 
-// ErrorCode - CATEGORY_NAME_EMPTY: Category name is required and cannot be empty - CATEGORY_ORDER_NEGATIVE: Category order should be a positive integer - CATEGORY_PARENT_ID_INVALID: Parent ID of the category is invalid - IMAGE_ORDER_NEGATIVE: Image order should be a positive integer - INVALID_AUTH_TOKEN: Provided authentication token is invalid - INVALID_ID: Provided short ID or UUID is invalid - MISSING_ADMIN_ROLE: Required role \"admin\" is missing on provided authentication token - PRODUCT_CATEGORY_IDS_INVALID: Category ID's of product are invalid - PRODUCT_MANUFACTURER_ID_INVALID: Manufacturer ID of the product is invalid - PRODUCT_NAME_EMPTY: Product name is required and cannot be empty - PRODUCT_PRICE_NEGATIVE: Product price should be a positive integer - UNKNOWN_CATEGORY: The category does not exist - UNKNOWN_ERROR: An unknown error occurred - UNKNOWN_IMAGE: The image does not exist - UNKNOWN_MANUFACTURER: The manufacturer does not exist - UNKNOWN_PRODUCT: The product does not exist 
+// ErrorCode - CATEGORY_NAME_EMPTY: Category name is required and cannot be empty - CATEGORY_ORDER_NEGATIVE: Category order should be a positive integer - CATEGORY_PARENT_ID_INVALID: Parent ID of the category is invalid - IMAGE_ORDER_NEGATIVE: Image order should be a positive integer - INVALID_AUTH_TOKEN: Provided authentication token is invalid - INVALID_ID: Provided short ID or UUID is invalid - MISSING_ADMIN_ROLE: Required role \"admin\" is missing on provided authentication token - PARAMETER_MISSING: A required URL parameter is missing - PRODUCT_CATEGORY_IDS_INVALID: Category ID's of product are invalid - PRODUCT_MANUFACTURER_ID_INVALID: Manufacturer ID of the product is invalid - PRODUCT_NAME_EMPTY: Product name is required and cannot be empty - PRODUCT_PRICE_NEGATIVE: Product price should be a positive integer - SINGLE_IMAGE_IN_FORM: Exactly one image is expected in multipart form, but none or multiple are provided - UNKNOWN_CATEGORY: The category does not exist - UNKNOWN_ERROR: An unknown error occurred - UNKNOWN_IMAGE: The image does not exist - UNKNOWN_MANUFACTURER: The manufacturer does not exist - UNKNOWN_PRODUCT: The product does not exist 
 type ErrorCode string
 
 // List of ErrorCode
@@ -27,10 +27,12 @@ const (
 	ERRORCODE_INVALID_AUTH_TOKEN ErrorCode = "INVALID_AUTH_TOKEN"
 	ERRORCODE_INVALID_ID ErrorCode = "INVALID_ID"
 	ERRORCODE_MISSING_ADMIN_ROLE ErrorCode = "MISSING_ADMIN_ROLE"
+	ERRORCODE_PARAMETER_MISSING ErrorCode = "PARAMETER_MISSING"
 	ERRORCODE_PRODUCT_CATEGORY_IDS_INVALID ErrorCode = "PRODUCT_CATEGORY_IDS_INVALID"
 	ERRORCODE_PRODUCT_MANUFACTURER_ID_INVALID ErrorCode = "PRODUCT_MANUFACTURER_ID_INVALID"
 	ERRORCODE_PRODUCT_NAME_EMPTY ErrorCode = "PRODUCT_NAME_EMPTY"
 	ERRORCODE_PRODUCT_PRICE_NEGATIVE ErrorCode = "PRODUCT_PRICE_NEGATIVE"
+	ERRORCODE_SINGLE_IMAGE_IN_FORM ErrorCode = "SINGLE_IMAGE_IN_FORM"
 	ERRORCODE_UNKNOWN_CATEGORY ErrorCode = "UNKNOWN_CATEGORY"
 	ERRORCODE_UNKNOWN_ERROR ErrorCode = "UNKNOWN_ERROR"
 	ERRORCODE_UNKNOWN_IMAGE ErrorCode = "UNKNOWN_IMAGE"
@@ -46,10 +48,12 @@ var allowedErrorCodeEnumValues = []ErrorCode{
 	"INVALID_AUTH_TOKEN",
 	"INVALID_ID",
 	"MISSING_ADMIN_ROLE",
+	"PARAMETER_MISSING",
 	"PRODUCT_CATEGORY_IDS_INVALID",
 	"PRODUCT_MANUFACTURER_ID_INVALID",
 	"PRODUCT_NAME_EMPTY",
 	"PRODUCT_PRICE_NEGATIVE",
+	"SINGLE_IMAGE_IN_FORM",
 	"UNKNOWN_CATEGORY",
 	"UNKNOWN_ERROR",
 	"UNKNOWN_IMAGE",
